- ✅ AWS S3 integration with presigned URLs for secure uploads   - ✅ OpenAI DALL-E 3 integration for plushie generation   - ✅ Credits system with automatic deduction   - ✅ Transaction logging for all credit operations   - ✅ Async generation processing   - ✅ Progress tracking and status endpoints   - ✅ Full authentication and authorization   - ✅ TypeScript type safety throughout   - ✅ Error handling and validation

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,40 @@
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NODE_ENV=development
 
-# Database (for future Phase 2)
-# DATABASE_URL=postgresql://user:password@localhost:5432/plushifyme
+# Database (Docker PostgreSQL)
+DATABASE_URL=postgresql://plushifyme:plushifyme_dev_password@localhost:5432/plushifyme
 
-# Authentication (for future Phase 2)
-# BETTER_AUTH_SECRET=your-secret-key-here
-# BETTER_AUTH_URL=http://localhost:3000
+# Authentication (better-auth)
+# Generate with: openssl rand -base64 32
+BETTER_AUTH_SECRET=your-random-secret-key-here-replace-this
+BETTER_AUTH_URL=http://localhost:3000
 
-# AI Model API (for future Phase 2)
-# AI_MODEL_API_KEY=your-api-key-here
-# AI_MODEL_API_URL=https://api.example.com
+# Email Provider (choose one)
+# Option 1: Resend (recommended for development)
+EMAIL_FROM=noreply@plushifyme.com
+# RESEND_API_KEY=re_...
 
-# Payment Processing (for future Phase 2)
-# STRIPE_SECRET_KEY=sk_test_...
-# STRIPE_PUBLISHABLE_KEY=pk_test_...
-# STRIPE_WEBHOOK_SECRET=whsec_...
+# Option 2: SendGrid
+# SENDGRID_API_KEY=SG...
+
+# Option 3: SMTP (for testing)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASSWORD=your-app-password
+
+# AI Image Generation (OpenAI DALL-E 3)
+OPENAI_API_KEY=sk-...
+OPENAI_ORG_ID=org-...
+
+# Cloud Storage (AWS S3)
+AWS_ACCESS_KEY_ID=AKIA...
+AWS_SECRET_ACCESS_KEY=...
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=plushifyme-images
+
+# Payment Processing (Stripe)
+STRIPE_SECRET_KEY=sk_test_...
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
