--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "^3.2.5",
     "prisma": "^6.19.0",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
